# scikit-rvm

./: .travis.yml  README.md  README.rst  nose.cfg  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
skrvm/: __init__.py  rvm.py
skrvm/tests/: test.py
tests/: performance.py  test_rvm.py
