[project]
name = "scikit-rvm"
version = "0.1.0a1"
description = "Relevance Vector Machine implementation using the scikit-learn API"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
  { name = "James Ritchie", email = "james.a.ritchie@gmail.com" },
]
license = { text = "BSD" }
keywords = ["machine-learning", "rvm", "sparse", "bayesian", "scikit-learn"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "numpy>=2.0",
  "scipy>=1.11",
  "scikit-learn>=1.4",
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests*"]

# uv-specific configuration
[tool.uv]
dev-dependencies = [
  "coverage>=7",
]
