[project]
name = "scikit-rvm"
version = "0.1.0a1"
description = "Relevance Vector Machine implementation using the scikit-learn API"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
  { name = "James Ritchie", email = "james.a.ritchie@gmail.com" },
]
license = { text = "BSD" }
keywords = ["machine-learning", "rvm", "sparse", "bayesian", "scikit-learn"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0",
  "scipy>=1.12",
  "scikit-learn>=1.5",
]

[dependency-groups]
dev = [
    "coverage>=7.10.3",
    "ruff>=0.12.8",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests*"]

# Ruff configuration
[tool.ruff]
line-length = 100
src = ["skrvm", "tests"]
exclude = [
  ".venv",
  "build",
  "dist",
  "__pycache__",
]

[tool.ruff.lint.isort]
known-first-party = ["skrvm"]
